--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
 .clearfix:before, .clearfix:after {
